# Multi_RAG_chatbot

./: .gitignore  .pre-commit-config.yaml  Book1.xlsx  package-lock.json
.github/workflows/: ci.yml
apps/rag-api/: .env.example  Dockerfile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
apps/rag-api/src/app/: chunking.py  config.py  embeddings.py  extractors.py  generation.py  hybrid.py  main.py  rerank.py  streaming.py  vectorstore.py
apps/rag-api/tests/: test_health.py
apps/rag-web/: Dockerfile  index.html  package-lock.json  package.json
apps/rag-web/src/: App.tsx  api.ts
apps/rag-web/src/components/: Chat.tsx  Citation.tsx  Message.tsx  Upload.tsx
deploy/compose/: docker-compose.dev.yml
scripts/: check_openai.py
