[tool.poetry]
name = "rag-api"
version = "0.1.0"
description = "RAG API service"
authors = ["You <you@example.com>"]
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
loguru = "^0.7.2"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
black = "^24.8.0"
ruff = "^0.6.9"
mypy = "^1.10.0"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"